--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "1.0.0",
   "description": "Real-time chat application",
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "setup": "npm run setup:backend && npm run setup:frontend",
-    "setup:backend": "cd backend && npm install",
+    "setup": "npm run setup:e2e && npm run setup:frontend",
+    "setup:e2e": "cd e2e && npm install",
     "setup:frontend": "cd frontend && npm install --legacy-peer-deps",
+    "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:backend": "cd backend && npm start",
-    "start:frontend": "cd frontend && npm start",
+    "start": "cd frontend && npm run start",
     "test": "cd e2e && npm test"
   },
   "devDependencies": {
