--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -73,7 +73,7 @@ jobs:
 
           # Docker 설치
           sudo yum update -y
-          sudo amazon-linux-extras install docker -y
+          sudo yun install docker -y
           sudo systemctl start docker
           sudo systemctl enable docker
 
