--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -122,35 +122,49 @@ jobs:
       - name: Create new Launch Template Version with updated User Data and Public IP
         id: create-lt-version
         run: |
+          # 기존 시작 템플릿의 최신 버전 정보를 가져옵니다.
           LT_DATA=$(aws ec2 describe-launch-template-versions \
             --launch-template-name ${{ env.LAUNCH_TEMPLATE_NAME }} \
             --versions '$Latest' \
             --query 'LaunchTemplateVersions[0].LaunchTemplateData' \
             --output json)
           
+          # jq 스크립트를 임시 파일로 저장합니다.
+          # 싱글 쿼트('EOF_JQ_SCRIPT')를 사용하여 스크립트 내부에 bash 변수 확장을 방지합니다.
+          cat <<'EOF_JQ_SCRIPT' > /tmp/update_lt_data.jq
+          .UserData = $USER_DATA_BASE64 |
+          del(.SecurityGroupIds) | # 최상위 SecurityGroupIds 제거
+          del(.SecurityGroups) |   # 최상위 SecurityGroups 제거 (만약 사용되었다면)
+          
+          .NetworkInterfaces = (.NetworkInterfaces // []) | # NetworkInterfaces가 없으면 빈 배열로 초기화
+          
+          # 첫 번째 네트워크 인터페이스를 업데이트하거나 생성합니다.
+          # DeviceIndex는 0으로 고정하고, Public IP 및 보안 그룹을 설정합니다.
+          .NetworkInterfaces[0] |= (
+            . // {} | # 요소가 없으면 빈 객체로 시작
+            .DeviceIndex = 0 | # 첫 번째 네트워크 인터페이스 (Eth0)
+            .AssociatePublicIpAddress = true |
+            .Groups = [$ASG_SECURITY_GROUP_ID] # 보안 그룹 ID를 배열로 설정
+          )
+          EOF_JQ_SCRIPT
+
+          # user-data와 함께 NetworkInterfaces 설정을 업데이트합니다.
+          # -f 옵션으로 jq 스크립트 파일을 지정하고, --arg로 변수를 전달합니다.
           UPDATED_LT_DATA=$(echo "$LT_DATA" | jq \
             --arg USER_DATA_BASE64 "${{ env.USER_DATA_BASE64 }}" \
-            '
-            .UserData = $USER_DATA_BASE64 |
-            .NetworkInterfaces = (.NetworkInterfaces // []) |
-            .NetworkInterfaces[0] |= (
-              . // {} |
-              .DeviceIndex = 0 | # 첫 번째 네트워크 인터페이스 (Eth0)
-              .AssociatePublicIpAddress = true |
-              .Groups = [$ASG_SECURITY_GROUP_ID] # 보안 그룹 ID를 배열로 설정
-            )
-            '
+            --arg ASG_SECURITY_GROUP_ID "${{ env.ASG_SECURITY_GROUP_ID }}" \
+            -f /tmp/update_lt_data.jq \
           )
 
+          # 새로운 시작 템플릿 버전을 생성합니다.
           NEW_LT_VERSION=$(aws ec2 create-launch-template-version \
             --launch-template-name ${{ env.LAUNCH_TEMPLATE_NAME }} \
             --launch-template-data "$UPDATED_LT_DATA" \
             --query 'LaunchTemplateVersion.VersionNumber' \
             --output text)
-
+          
           echo "Created new Launch Template version: $NEW_LT_VERSION"
           echo "NEW_LT_VERSION=$NEW_LT_VERSION" >> $GITHUB_ENV
-
 
       - name: Set new Launch Template Version as Default
         run: |
